--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fontkit": "^2.0.4",
+    "jsdom": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
+    "stripe": "^17.5.0"
   }
 }
