--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -26,15 +28,16 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.4",
     "lucide-react": "^0.460.0",
     "next-themes": "^0.4.3",
     "quill": "^2.0.3",
     "react": "^18.3.1",
-    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
